Adicionando Rotas no Angular

--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -35,7 +35,7 @@
           <hr class="mt-5 mb-5" />
 
           <p class="text-center font-weight-bold text-black-50">
-            Não tem uma conta? <a href="">Cadastre-se</a>
+            Não tem uma conta? <a routerLink="/cadastrar">Cadastre-se</a>
           </p>
         </div>
       </div>
