--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -70,7 +70,9 @@
           </div>
 
           <div class="d-flex justify-content-center pt-5">
-            <button type="submit" class="btn cancel mr-4">Cancelar</button>
+            <button type="submit" class="btn cancel mr-4" routerLink="/entrar">
+              Cancelar
+            </button>
             <button type="submit" class="btn register">Cadastrar</button>
           </div>
         </div>
