--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -14,6 +14,7 @@
         <div class="col-md-3">
           <div class="form-group">
             <input
+              [(ngModel)]="tema.description"
               type="text"
               class="form-control"
               id="descricao"
@@ -22,7 +23,9 @@
           </div>
 
           <div class="d-flex justify-content-center">
-            <button class="btn btn-light">Cadastrar</button>
+            <button class="btn btn-light" (click)="cadastrarTema()">
+              Cadastrar
+            </button>
           </div>
         </div>
       </div>
@@ -43,28 +46,28 @@
         <thead>
           <tr>
             <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">Descrição</th>
+            <th scope="col" class="text-right">Modificações</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
+          <tr *ngFor="let item of listTemas">
+            <th>{{ item.idtopic }}</th>
+            <td>{{ item.description }}</td>
+            <td class="d-flex justify-content-end">
+              <button
+                class="btn btn-info mr-3"
+                [routerLink]="['/tema-edit', item.idtopic]"
+              >
+                Editar
+              </button>
+              <button
+                class="btn btn-danger"
+                [routerLink]="['/tema-delete', item.idtopic]"
+              >
+                Apagar
+              </button>
+            </td>
           </tr>
         </tbody>
       </table>
