--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -51,6 +51,7 @@
         >Todas as Postagens</a
       >
       <a
+        (click)="findByIdUser()"
         class="nav-link text-secondary font-weight-bold"
         id="nav-minhasPostagens-tab"
         data-toggle="tab"
@@ -72,14 +73,31 @@
       >
     </div>
   </nav>
-  <div class="tab-content" id="nav-tabContent">
+  <div class="tab-content mt-4" id="nav-tabContent">
     <div
       class="tab-pane fade show active"
       id="todasPostagens"
       role="tabpanel"
       aria-labelledby="nav-todasPostagens-tab"
     >
-      Todas as Postagens
+      <div class="card-columns">
+        <div class="card text-center" *ngFor="let item of listPostagens">
+          <div class="card-body">
+            <h5 class="card-title m-0">{{ item.title }}</h5>
+            <small class="text-muted">Tema: {{ item.topic.description }}</small>
+            <p class="card-text mt-3">{{ item.text }}</p>
+            <p class="card-text">
+              <small class="text-muted"
+                >{{ item.datepost | date: "dd/MM/yyyy" }} às
+                {{ item.datepost | date: "HH:mm" }}</small
+              >
+            </p>
+            <p class="card-text">
+              <small class="text-muted">by: {{ item.username.name }}</small>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <div
       class="tab-pane fade"
@@ -87,7 +105,34 @@
       role="tabpanel"
       aria-labelledby="nav-minhasPostagens-tab"
     >
-      Minhas Postagens
+      <div class="card-columns">
+        <div class="card text-center" *ngFor="let item of usuario.posts">
+          <div class="card-body">
+            <h5 class="card-title m-0">{{ item.title }}</h5>
+            <small class="text-muted">Tema: {{ item.topic.description }}</small>
+            <p class="card-text mt-3">{{ item.text }}</p>
+            <p class="card-text">
+              <small class="text-muted"
+                >{{ item.datepost | date: "dd/MM/yyyy" }} às
+                {{ item.datepost | date: "HH:mm" }}</small
+              >
+            </p>
+
+            <a
+              [routerLink]="['/postagem-edit', item.idpost]"
+              class="text-info mr-3"
+              href=""
+              >Editar</a
+            >
+            <a
+              [routerLink]="['/postagem-delete', item.idpost]"
+              class="text-danger"
+              href=""
+              >Apagar</a
+            >
+          </div>
+        </div>
+      </div>
     </div>
     <div
       class="tab-pane fade"
@@ -95,7 +140,23 @@
       role="tabpanel"
       aria-labelledby="nav-postagemTema-tab"
     >
-      Postagens por Tema
+      <div class="card-columns" *ngFor="let tema of listTemas">
+        <div class="card text-center" *ngFor="let item of tema.post">
+          <div class="card-body">
+            <h5 class="card-title m-0">{{ item.title }}</h5>
+            <p class="card-text mt-3">{{ item.text }}</p>
+            <p class="card-text">
+              <small class="text-muted"
+                >{{ item.datepost | date: "dd/MM/yyyy" }} às
+                {{ item.datepost | date: "HH:mm" }}</small
+              >
+            </p>
+            <p class="card-text">
+              <small class="text-muted">by: {{ item.username.name }}</small>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -126,6 +187,7 @@
         <div class="form-group">
           <label for="titulo">Título</label>
           <input
+            [(ngModel)]="postagem.title"
             type="text"
             class="form-control"
             id="titulo"
@@ -135,6 +197,7 @@
         <div class="form-group">
           <label for="texto">Texto</label>
           <textarea
+            [(ngModel)]="postagem.text"
             class="form-control"
             name="texto"
             id="texto"
@@ -147,8 +210,16 @@
             >Escolha um tema ou
             <a data-dismiss="modal" routerLink="/tema">cadastre um novo</a>:
           </label>
-          <select class="form-control" name="tema" id="tema">
-            <option value="">Temas</option>
+          <select
+            class="form-control"
+            name="tema"
+            id="tema"
+            [(ngModel)]="idTema"
+            (change)="findByIdTema()"
+          >
+            <option *ngFor="let item of listTemas" value="{{ item.idtopic }}">
+              {{ item.description }}
+            </option>
           </select>
         </div>
       </div>
@@ -156,7 +227,14 @@
         <button type="button" class="btn btn-danger" data-dismiss="modal">
           Cancelar
         </button>
-        <button type="button" class="btn btn-success">Publicar</button>
+        <button
+          type="button"
+          class="btn btn-success"
+          (click)="publicar()"
+          data-dismiss="modal"
+        >
+          Publicar
+        </button>
       </div>
     </div>
   </div>
