--- a/src/app/delete/postagem-delete/postagem-delete.component.html
+++ b/src/app/delete/postagem-delete/postagem-delete.component.html
@@ -16,6 +16,7 @@
   <div class="row d-flex justify-content-center mt-4">
     <div class="col-md-4">
       <div class="card text-center">
+        <img src="{{ postagem.image }}" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title m-0">{{ postagem.title }}</h5>
           <small class="text-muted"
