--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -2,33 +2,10 @@ footer {
   background-image: linear-gradient(60deg, #797474, #f2a4e9e7);
 }
 
-ul.social-network {
-  list-style: none;
-  padding: 0;
-}
-
-ul.social-network li {
-  display: inline;
-  margin: 0;
-  padding: 5px;
-}
-
 .fa {
-  font-size: 30pt;
-  color: #fff;
+  font-size: 12pt;
+  color: black;
   padding: 10px;
-}
-
-.fa-facebook-square:hover {
-  color: #3b5998;
-}
-
-.fa-instagram:hover {
-  color: #c13584;
-}
-
-.fa-linkedin-square:hover {
-  color: #0072b1;
 }
 
 .fs-14 {
