--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,49 +1,121 @@
-<footer class="page-footer font-small pt-4">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 d-flex justify-content-center">
-        <h4 class="text-dark">Siga-nos nas redes sociais</h4>
-      </div>
+<!-- Footer -->
+<footer
+  class="text-center text-lg-start text-muted"
+  style="background-color: #bfbfbf"
+>
+  <!-- Section: Social media -->
+  <section
+    class="d-flex justify-content-center align-items-center pt-3 pb-3"
+    style="background-color: #17a3b84f"
+  >
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span class="text-black-50 font-weight-bolder"
+        >Siga-me nas redes sociais:</span
+      >
     </div>
+    <!-- Left -->
 
-    <div class="row">
-      <div class="col-md-12 d-flex justify-content-center">
-        <ul class="social-network">
-          <li>
-            <a
-              href="https://www.facebook.com/generationbrasil"
-              target="_blank"
-              class="icoFacebook"
-              ><i class="fa fa-facebook-square" aria-hidden="true"></i
-            ></a>
-          </li>
-
-          <li>
-            <a
-              href="https://www.instagram.com/generationbrasil/"
-              target="_blank"
-              class="icoInstagram"
-              ><i class="fa fa-instagram" aria-hidden="true"></i
-            ></a>
-          </li>
-
-          <li>
-            <a
-              href="https://www.linkedin.com/school/generationbrasil/"
-              target="_blank"
-              class="icoLinkedin"
-              ><i class="fa fa-linkedin-square" aria-hidden="true"></i
-            ></a>
-          </li>
-        </ul>
-      </div>
+    <!-- Right -->
+    <div class="ml-5">
+      <a
+        href="https://www.linkedin.com/in/lissasonoda"
+        target="_blank"
+        class="me-4 text-reset"
+      >
+        <img
+          src="assets/img/linkedin.png"
+          alt="Icone do LinkedIn"
+          width="30px"
+          class="mr-4"
+        />
+      </a>
+      <a
+        href="https://github.com/lissa-sonoda"
+        target="_blank"
+        class="me-4 text-reset"
+      >
+        <img
+          src="assets/img/github.png"
+          alt="Icone do GitHub"
+          width="30px"
+          class="mr-4"
+        />
+      </a>
+      <a
+        href="https://www.instagram.com/lihsonoda/"
+        target="_blank"
+        class="me-4 text-reset"
+      >
+        <img
+          src="assets/img/instagram.png"
+          alt="Icone do Instagram"
+          width="30px"
+          class="mr-4"
+        />
+      </a>
     </div>
-  </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
 
+  <!-- Section: Links  -->
+  <section>
+    <div class="container text-center text-md-start mt-3">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold text-black-50 mb-4">
+            <i class="fas fa-gem me-3"></i>Lissa's Blog
+          </h6>
+          <p>Projeto de blog desenvolvido no bootcamp da Generation.</p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2"></div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-7 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold text-black-50 mb-4">Contato</h6>
+          <div class="row d-flex align-items-center">
+            <div class="col-md-4">
+              <p>
+                <i class="fa fa-map-marker" aria-hidden="true"></i>Av. John Boyd
+                Dunlop<br />Campinas/SP
+              </p>
+            </div>
+            <div class="col-md-4">
+              <p>
+                <i class="fa fa-envelope me-3"></i>
+                helen.lissa@gmail.com
+              </p>
+            </div>
+            <div class="col-md-4">
+              <p class="pt-0 mt-0">
+                <i class="fa fa-phone me-3"></i> + 55 19 98123-9223
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
   <div class="footer-copyright bg-dark text-center py-2 fs-14">
     <span class="text-light">© 2021 Copyright: </span>
     <a class="text-light" target="_blank" href="https://brasil.generation.org"
-      >brasil.generation.org</a
+      >Lissa's Travel Blog</a
     >
   </div>
+  <!-- Copyright -->
 </footer>
+<!-- Footer -->
